crates/analyzer/tests/snapshots/errors__indexed_event.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: more than three indexed fields in `event MyEvent`
  ┌─ compile_errors/indexed_event.fe:3:5
  │
3 │     pub addr1: address
  │     ^^^^^^^^^^^^^^^^^^
4 │     #indexed
5 │     pub addr2: address
  │     ^^^^^^^^^^^^^^^^^^
6 │     #indexed
7 │     pub addr3: address
  │     ^^^^^^^^^^^^^^^^^^
8 │     #indexed
9 │     pub addr4: address
  │     ^^^^^^^^^^^^^^^^^^ 4 indexed fields
  │
  = Note: Remove the `indexed` attribute from at least 1 field.


